adiciona media queries

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <h1>RUMO AO CLASSE 11</h1>
-    <div>
-        <p id="countdown-p"></p>
-    </div>
+    <div class="container">
+    <h1 class="titulo">🎉 RUMO AO CLASSE 11! 🎉</h1>
+    <p id="countdown-p"></p>
+</div>
 </body>
 </html>
