troca linha por blocos de tempo

--- a/index.html
+++ b/index.html
@@ -9,8 +9,25 @@
 </head>
 <body>
     <div class="container">
-    <h1 class="titulo">🎉 RUMO AO CLASSE 11! 🎉</h1>
-    <p id="countdown-p"></p>
+    <h1 class="titulo">🎉VOLTA ÀS AULAS! 🎉</h1>
+    <div class="contador-container">
+        <div class="bloco">
+            <span id="dias">00</span>
+            <p>Dias</p>
+        </div>
+        <div class="bloco">
+            <span id="horas">00</span>
+            <p>Horas</p>
+        </div>
+        <div class="bloco">
+            <span id="minutos">00</span>
+            <p>Minutos</p>
+        </div>
+        <div class="bloco">
+            <span id="segundos">00</span>
+            <p>Segundos</p>
+        </div>
+    </div>
 </div>
 </body>
 </html>
