--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-    <h1 class="titulo">🎉VOLTA ÀS AULAS! 🎉</h1>
+    <h1 class="titulo">VOLTA ÀS AULAS!</h1>
     <div class="contador-container">
         <div class="bloco">
             <span id="dias">00</span>
@@ -21,11 +21,11 @@
         </div>
         <div class="bloco">
             <span id="minutos">00</span>
-            <p>Minutos</p>
+            <p id="min">Minutos</p>
         </div>
         <div class="bloco">
             <span id="segundos">00</span>
-            <p>Segundos</p>
+            <p id="sec">Segundos</p>
         </div>
     </div>
 </div>
